# sdpa

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  test.wlang
include/: analysis_utils.hpp  ast.hpp  ast_printer.hpp  dfa_utils.hpp  io.hpp  lexer.hpp  lv.hpp  parser.hpp  set_utils.hpp  test.hpp  token.hpp  utils.hpp
include/dfa/: lv.hpp
resources/: ex1_4_a.wlang  ex1_4_b.wlang  factorial.wlang
src/: analysis_utils.cpp  dfa_utils.cpp  lexer.cpp  lv.cpp  parser.cpp  set_utils.cpp
src/dfa/: lv.cpp
test/: test_analysis_utils.cpp  test_analysis_utils.hpp
test_programs/: ex_1_4_a_program.wlang  ex_1_4_b_program.wlang
